--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,9 +2,12 @@ name: Scala CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -12,21 +15,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: compile
-      run: sbt compile
-  run_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Build Project and export Coverage
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Setup
+        run:
+          sudo -i
+          apt install curl -y
+      - name: Run tests
+        run:
+          sbt clean test jacoco
+      - name: Upload report to Codecov
         run: |
-          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt clean jacoco jacocoCoveralls
+          curl -s https://codecov.io/bash > .codecov
+          chmod +x .codecov
+          bash .codecov
